feat: increased coveraged and fixed minor bugs (#63)
* feat: increased coveraged and fixed minor bugs

* fix: remove public modifier